@@ -1,5 +1,8 @@
 2003-06-28  Bharat Mediratta  <bharat@menalto.com> 1.3.5-cvs-b36
 
+	* Fixed bugs in edit_appearance and photo_owner where we were using
+	  the php short open tags.
+
 	* Fix a bug in AlbumItem where it crashes if the item owner is not set.
 
 2003-06-26  Beckett Madden-Woods  <beckett@beckettmw.com> 1.3.5-cvs-b35
